# buildbox-common

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  README.rst  buildbox-common.h  client.cc
buildbox-common/buildboxcommon/: buildboxcommon_cashash.cpp  buildboxcommon_cashash.h  buildboxcommon_client.cpp  buildboxcommon_client.h  buildboxcommon_commandline.cpp  buildboxcommon_commandline.h  buildboxcommon_commandlinetypes.cpp  buildboxcommon_commandlinetypes.h  buildboxcommon_connectionoptions.cpp  buildboxcommon_connectionoptions.h  buildboxcommon_connectionoptions_commandline.cpp  buildboxcommon_connectionoptions_commandline.h  buildboxcommon_fallbackstageddirectory.cpp  buildboxcommon_fallbackstageddirectory.h  buildboxcommon_fileutils.cpp  buildboxcommon_fileutils.h  buildboxcommon_grpcretrier.cpp  buildboxcommon_grpcretrier.h  buildboxcommon_grpcretry.cpp  buildboxcommon_grpcretry.h  buildboxcommon_localcasstageddirectory.cpp  buildboxcommon_localcasstageddirectory.h  buildboxcommon_logging.cpp  buildboxcommon_logging.h  buildboxcommon_logstreamwriter.cpp  buildboxcommon_logstreamwriter.h  buildboxcommon_mergeutil.cpp  buildboxcommon_mergeutil.h  buildboxcommon_merklize.cpp  buildboxcommon_merklize.h  buildboxcommon_metricsconfig.cpp  buildboxcommon_metricsconfig.h  buildboxcommon_platformutils.cpp  buildboxcommon_platformutils.h  buildboxcommon_protos.h  buildboxcommon_reloadtokenauthenticator.cpp  buildboxcommon_reloadtokenauthenticator.h  buildboxcommon_runner.cpp  buildboxcommon_runner.h  buildboxcommon_scopeguard.cpp  (+21 more)
buildbox-common/buildboxcommonmetrics/: README.md  buildboxcommonmetrics_countingmetric.cpp  buildboxcommonmetrics_countingmetric.h  buildboxcommonmetrics_countingmetricutil.cpp  buildboxcommonmetrics_countingmetricutil.h  buildboxcommonmetrics_countingmetricvalue.cpp  buildboxcommonmetrics_countingmetricvalue.h  buildboxcommonmetrics_distributionmetric.cpp  buildboxcommonmetrics_distributionmetric.h  buildboxcommonmetrics_distributionmetricutil.cpp  buildboxcommonmetrics_distributionmetricutil.h  buildboxcommonmetrics_distributionmetricvalue.cpp  buildboxcommonmetrics_distributionmetricvalue.h  buildboxcommonmetrics_durationmetrictimer.cpp  buildboxcommonmetrics_durationmetrictimer.h  buildboxcommonmetrics_durationmetricvalue.cpp  buildboxcommonmetrics_durationmetricvalue.h  buildboxcommonmetrics_filewriter.cpp  buildboxcommonmetrics_filewriter.h  buildboxcommonmetrics_gaugemetric.cpp  buildboxcommonmetrics_gaugemetric.h  buildboxcommonmetrics_gaugemetricutil.cpp  buildboxcommonmetrics_gaugemetricutil.h  buildboxcommonmetrics_gaugemetricvalue.cpp  (+29 more)
buildboxcommon/: buildboxcommon_cashash.cpp  buildboxcommon_cashash.h  buildboxcommon_client.cpp  buildboxcommon_client.h  buildboxcommon_connectionoptions.cpp  buildboxcommon_connectionoptions.h  buildboxcommon_direntwrapper.cpp  buildboxcommon_direntwrapper.h  buildboxcommon_exception.cpp  buildboxcommon_exception.h  buildboxcommon_fallbackstageddirectory.cpp  buildboxcommon_fallbackstageddirectory.h  buildboxcommon_fileutils.cpp  buildboxcommon_fileutils.h  buildboxcommon_grpcretry.cpp  buildboxcommon_grpcretry.h  buildboxcommon_localcasstageddirectory.cpp  buildboxcommon_localcasstageddirectory.h  buildboxcommon_logging.cpp  buildboxcommon_logging.h  buildboxcommon_mergeutil.cpp  buildboxcommon_mergeutil.h  buildboxcommon_merklize.cpp  buildboxcommon_merklize.h  buildboxcommon_protos.h  buildboxcommon_requestmetadata.cpp  buildboxcommon_requestmetadata.h  buildboxcommon_runner.cpp  buildboxcommon_runner.h  buildboxcommon_stageddirectory.cpp  buildboxcommon_stageddirectory.h  buildboxcommon_systemutils.cpp  buildboxcommon_systemutils.h  buildboxcommon_tempconstants.h  buildboxcommon_temporarydirectory.cpp  buildboxcommon_temporarydirectory.h  buildboxcommon_temporaryfile.cpp  buildboxcommon_temporaryfile.h  buildboxcommon_timeutils.cpp  buildboxcommon_timeutils.h
cmake/: BuildboxBenchmarkSetup.cmake  BuildboxCommonConfig.cmake  BuildboxGTestSetup.cmake  BuildboxGlogSetup.cmake
protos/: CMakeLists.txt
test/: CMakeLists.txt  buildboxcommon_cashash.t.cpp  buildboxcommon_client.t.cpp  buildboxcommon_commandline.t.cpp  buildboxcommon_connectionoptions.t.cpp  buildboxcommon_connectionoptions_commandline.t.cpp  buildboxcommon_direntwrapper.t.cpp  buildboxcommon_fallbackstageddirectory.t.cpp  buildboxcommon_fileutils.t.cpp  buildboxcommon_grpcretrier.t.cpp  buildboxcommon_grpcretry.t.cpp  buildboxcommon_localcasstageddirectory.t.cpp  buildboxcommon_logging.t.cpp  buildboxcommon_logstreamwriter.t.cpp  buildboxcommon_mergeutil.t.cpp  buildboxcommon_merklize.t.cpp  buildboxcommon_protos.t.cpp  buildboxcommon_reloadtokenauthenticator.t.cpp  buildboxcommon_requestmetadata.t.cpp  buildboxcommon_runner.t.cpp  buildboxcommon_scopeguard.t.cpp  buildboxcommon_stageddirectory.t.cpp  buildboxcommon_streamingstandardoutputfilemonitor.t.cpp  buildboxcommon_streamingstandardoutputinotifyfilemonitor.t.cpp  buildboxcommon_streamingstandardoutputstatfilemonitor.t.cpp  buildboxcommon_stringutils.t.cpp  buildboxcommon_systemutils.t.cpp  buildboxcommon_temporarydirectory.t.cpp  buildboxcommon_temporaryfile.t.cpp  buildboxcommon_tests.m.cpp  buildboxcommon_timeutils.t.cpp  buildboxcommonmetrics_countingmetric_test.t.cpp  buildboxcommonmetrics_countingmetricutil_test.t.cpp  buildboxcommonmetrics_countingmetricvalue_test.t.cpp  buildboxcommonmetrics_distributionmetric.t.cpp  buildboxcommonmetrics_distributionmetricutil.t.cpp  buildboxcommonmetrics_distributionmetricvalue.t.cpp  buildboxcommonmetrics_durationmetrictimer_test.t.cpp  buildboxcommonmetrics_durationmetricvalue_test.t.cpp  buildboxcommonmetrics_gaugemetric.t.cpp  (+22 more)
test/buildbox-sample-project/: CMakeLists.txt  buildbox-sample-project.m.cpp
test/data/: mock_google_token.json
test/data/buildboxcommon_fallbackstageddirectory/upload_test/: test.txt
test/data/buildboxcommon_fallbackstageddirectory/upload_test/child/: child_test.txt
test/sample_project/: CMakeLists.txt  main.cc
tools/: CMakeLists.txt  buildboxcommon_casdownload.m.cpp
